# bc42_ctrl

./: CMakeLists.txt  README.md  bc42_ctrl.json
eds/: bc42_ctrl.xml
fsw/mission_inc/: bc42_ctrl_mission_cfg.h
fsw/platform_inc/: bc42_ctrl_platform_cfg.h
fsw/src/: app_cfg.h  bc42_ctrl_app.c  bc42_ctrl_app.h  ctrl42.c  ctrl42.h  ctrl42_tbl.c  ctrl42_tbl.h
fsw/tables/: cpu1_bc42_ctrl_ini.json  cpu1_bc42_ctrl_prm.json
